[SQLLINE-336][SQLLINE-376] Support plsql, pgsql queries and ability to add similar support for other dialects